# whale-schema

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Justfile  Makefile  README.md  fonto.lic  package-lock.json  package.json  schema.whas
examples/: README.md  (+5 more)
format/: .gitignore  Cargo.toml  FACETS_PROPOSAL.md  Makefile  TODO.md  core.whas  fonto.schema.json  schema.pest  test.whas
format/src/: lib.rs  main.rs  validation.rs
format/src/ast/: argvars.rs  attrs.rs  blocks.rs  comments.rs  elements.rs  facets.rs  file.rs  idents.rs  imports.rs  keywords.rs  mod.rs  primitives.rs  regex.rs  schemas.rs  splats.rs  symbols.rs  typedefs.rs  types.rs  typings.rs
format/src/cli/: args.rs  art.txt
format/src/compiler/: mod.rs  result.rs
format/src/export/: common.rs  fonto.rs  mod.rs  xsd.rs
format/src/formats/: mod.rs
format/src/formats/fonto/: attribute.rs  content_model.rs  element.rs  element_local.rs  iaea-map.json  mod.rs  niso-sts.json  primitive.rs  schema.rs  simpletype.rs  version.rs
format/src/import/: common.rs
format/src/model/: attr.rs  comment.rs  duplicity.rs  element.rs  group.rs  mod.rs  prelude.rs  primitive.rs  restriction.rs  schema.rs  simpletype.rs  type.rs  typehash.rs
format/src/sourced/: file.rs  manager.rs  mod.rs
format/src/tests/: ast.rs  compiler.rs  fonto.rs  grammar.rs  imports.rs  mod.rs  types.rs  xsd.rs
format/src/tools/: logging.rs  mod.rs  recursion.rs
format/vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
format/vscode/syntaxes/: whas.tmLanguage.json
(+110 files in other folders)
