[package]
name = "whale-schema"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
from-pest = "0.3.1"
pest-ast = "0.3.4"
tap = "1.0.1"
anyhow = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.10.2"
itertools = "0.11.0"
enum_variant_macros = "0.3.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
derive-getters = "0.3.0"
log = "0.4.20"
simplelog = "0.12.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pseudonym = "0.2.3"
derive_builder = "0.12.0"
wax = "0.6.0"
xmltree = "0.11.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
#codegen-units = 1